--- a/vege/index.html
+++ b/vege/index.html
@@ -1,48 +1,66 @@
 <!DOCTYPE html>
+<html lang="cs">
+
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Recepty</title>
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:600,800&amp;subset=latin-ext" rel="stylesheet">
-        <link rel="stylesheet" href="recepty.css">
-    </head>
-    <body>
 
-        <!-- hlavni recept -->
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Recepty</title>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:600,800&amp;subset=latin-ext" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
 
-        Salát s&nbsp;vlašskými ořechy
-        Saláty
-        5 komentářů
+<body>
 
-        <!-- maly recept 2 -->
+  <main>
 
-        Chlebíček s&nbsp;avokádem
-        Svačina
-        16 komentářů
+    <article class="kontejner">
 
-        <!-- maly recept 3 -->
+      <!-- hlavni recept -->
+      <div class="hlavnirecept">
+        <h2>Salát s&nbsp;vlašskými ořechy</h2>
+        <p class="kategorie">Saláty</p>
+        <p class="komentar">5 komentářů</p>
+      </div>
 
-        Pita chléb s&nbsp;cizrnou
-        Luštěniny
-        23 komentářů
+      <!-- maly recept 2 -->
+      <div class="recept chlebicek">
+        <h3>Chlebíček s&nbsp;avokádem</h3>
+        <p class="kategorie">Svačina</p>
+        <p class="komentar">16 komentářů</p>
+      </div>
 
-        <!-- maly recept 4 -->
+      <!-- maly recept 3 -->
+      <div class="recept tacos">
+        <h3>Avokádové tacos</h3>
+        <p class="kategorie">Mexická</p>
+        <p class="komentar">7 komentářů</p>
+      </div>
 
-        Avokádové tacos
-        Mexická
-        7 komentářů
+      <!-- maly recept 4 -->
+      <div class="recept pita">
+        <h3>Pita chléb s&nbsp;cizrnou</h3>
+        <p class="kategorie">Luštěniny</p>
+        <p class="komentar">23 komentářů</p>
+      </div>
 
-        <!-- maly recept 5 -->
+      <!-- maly recept 5 -->
+      <div class="recept burger">
+        <h3>Sojový burger</h3>
+        <p class="kategorie">Burgery</p>
+        <p class="komentar">19 komentářů</p>
+      </div>
+      <br>
+    </article>
 
-        Sojový burger
-        Burgery
-        19 komentářů
+  </main>
 
-        <footer class="paticka">
-            <p>Foto z <a href="https://unsplash.com">unsplash.com</a> (licence <a href="https://unsplash.com/license">do-whatever-you-want</a>)</p>
-        </footer>
+  <footer class="paticka">
+    <p>Foto z <a href="https://unsplash.com">unsplash.com</a> (licence <a href="https://unsplash.com/license">do-whatever-you-want</a>)</p>
+  </footer>
 
 
-    </body>
+</body>
+
 </html>
